# backend/api/gen/go/permission/service/v1/menu.pb.validate.go
@@ -1530,3 +1530,137 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = CountMenuResponseValidationError{}
+
+// Validate checks the field values on SyncMenusRequest with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *SyncMenusRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on SyncMenusRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// SyncMenusRequestMultiError, or nil if none found.
+func (m *SyncMenusRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *SyncMenusRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	for idx, item := range m.GetItems() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, SyncMenusRequestValidationError{
+						field:  fmt.Sprintf("Items[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, SyncMenusRequestValidationError{
+						field:  fmt.Sprintf("Items[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return SyncMenusRequestValidationError{
+					field:  fmt.Sprintf("Items[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return SyncMenusRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// SyncMenusRequestMultiError is an error wrapping multiple validation errors
+// returned by SyncMenusRequest.ValidateAll() if the designated constraints
+// aren't met.
+type SyncMenusRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m SyncMenusRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m SyncMenusRequestMultiError) AllErrors() []error { return m }
+
+// SyncMenusRequestValidationError is the validation error returned by
+// SyncMenusRequest.Validate if the designated constraints aren't met.
+type SyncMenusRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e SyncMenusRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e SyncMenusRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e SyncMenusRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e SyncMenusRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e SyncMenusRequestValidationError) ErrorName() string { return "SyncMenusRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e SyncMenusRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sSyncMenusRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = SyncMenusRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = SyncMenusRequestValidationError{}
